# source-rates

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  half-D.py  run.sh
include/: CRAMCoefficients.hpp  CRAMSolver.hpp  DepleteMatrix.hpp  Isotope.hpp
src/: CRAMSolver.cpp  DepleteMatrix.cpp  Isotope.cpp  main.cpp
